@@ -1,3 +1,10 @@
+2007-02-25  Sam Weinig  <sam@webkit.org>
+
+        Update forgotten files.
+
+        * rendering/RenderLayer.cpp:
+        (WebCore::RenderLayer::updateLayerPosition):
+
 2007-02-25  David Hyatt  <hyatt@apple.com>
 
         Fix for regression caused by changing the containing block of positioned elements with no positioned ancestor
